--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "hello-world-heroku-arathy",
   "version": "1.0.0",
   "description": "Hello World sample app",
-  "main": "index.js"
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  }
 }
